--- a/src/builders/signalconfig.json
+++ b/src/builders/signalconfig.json
@@ -372,6 +372,13 @@
             "amount": 1,
             "wordLen": 1
         },
+        "home_ok": {
+            "area": 132,
+            "dbNumber": 1,
+            "start": 109,
+            "amount": 1,
+            "wordLen": 1
+        },
         "start": {
             "area": 132,
             "dbNumber": 1,
@@ -380,6 +387,8 @@
             "wordLen": 1
         },
         "go1": {
+            "byte": 0,
+            "bit": 4,
             "area": 132,
             "dbNumber": 1,
             "start": 100,
@@ -387,6 +396,8 @@
             "wordLen": 1
         },
         "go2": {
+            "byte": 0,
+            "bit": 5,
             "area": 132,
             "dbNumber": 1,
             "start": 101,
@@ -394,6 +405,8 @@
             "wordLen": 1
         },
         "go3": {
+            "byte": 0,
+            "bit": 6,
             "area": 132,
             "dbNumber": 1,
             "start": 102,
@@ -401,6 +414,8 @@
             "wordLen": 1
         },
         "go4": {
+            "byte": 0,
+            "bit": 7,
             "area": 132,
             "dbNumber": 1,
             "start": 103,
@@ -408,6 +423,8 @@
             "wordLen": 1
         },
         "go5": {
+            "byte": 1,
+            "bit": 0,
             "area": 132,
             "dbNumber": 1,
             "start": 104,
@@ -415,6 +432,8 @@
             "wordLen": 1
         },
         "go6": {
+            "byte": 1,
+            "bit": 1,
             "area": 132,
             "dbNumber": 1,
             "start": 105,
@@ -422,6 +441,8 @@
             "wordLen": 1
         },
         "go7": {
+            "byte": 1,
+            "bit": 2,
             "area": 132,
             "dbNumber": 1,
             "start": 106,
@@ -429,6 +450,8 @@
             "wordLen": 1
         },
         "go8": {
+            "byte": 1,
+            "bit": 3,
             "area": 132,
             "dbNumber": 1,
             "start": 107,
@@ -436,6 +459,8 @@
             "wordLen": 1
         },
         "go9": {
+            "byte": 1,
+            "bit": 4,
             "area": 132,
             "dbNumber": 1,
             "start": 108,
